# TD-YOLOflow

./: .gitattributes  .gitignore  LICENSE  README.md  TD_YOLOflow.tox  YOLOflow.bat  bootstrap.bat  config.yaml  download_models.py  headless.py  main.py  pyproject.toml  readme.md  run_app.bat  setup_venv.bat  utils.py
models/: models.json
runs/scripts/: yoloflow_train_20250423_145751.py  yoloflow_train_20250423_152708.py  yoloflow_train_20250423_154206.py  yoloflow_train_20250424_003115.py  yoloflow_train_20250424_003309.py
tabs/: __init__.py  test_tab.py  train_tab.py  utils.py
yoloflow/: YOLOflow.sh  __init__.py  config.yaml  ndi_manager.py  ndi_manager_script.py  package.py  yoloflow_init.py
yoloflow/Backup/: requirements.txt
yoloflow/data/: classes.txt  dataset.yaml  labels.cache
yoloflow/runs/scripts/: yoloflow_train_20250423_145751.py  yoloflow_train_20250423_152708.py  yoloflow_train_20250423_154206.py  yoloflow_train_20250424_003115.py  yoloflow_train_20250424_003309.py  yoloflow_train_20250505_152637.py  yoloflow_train_20250505_160445.py
yoloflow/runs/train/Banana Model/: args.yaml  results.csv
yoloflow/tabs/: capture_tab.py  dino_point_core.py  review_tab.py  test_tab.py  tracker_worker.py
